skeplib/tests/fixtures/parser/invalid/vec_type_missing_elem.sk
fn main() -> Int {
  let xs: Vec[] = 0;
  return 0;
}
